[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymonitor-sdk"
version = "0.2.0"
description = "Monitoring SDK for FastAPI + ARQ — persistent TCP transport to pymonitor-collector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "msgpack>=1.0",
    "psutil>=5.9",
    "uvicorn>=0.48.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110", "starlette>=0.36"]
all    = ["fastapi>=0.110", "starlette>=0.36"]

[project.urls]
Repository = "https://github.com/yourorg/pymonitor-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymonitor*"]

[tool.uv.sources]
pymonitor-sdk = { workspace = true }

[dependency-groups]
dev = [
    "pymonitor-sdk[fastapi]",
]
